# pyusel

./: .gitmodules  README.md  pyproject.toml  req_depends.txt  requirements.txt  setup.py
examples/: testit.ipynb
pyusel/: __init__.py
pyusel/data/: __init__.py  axes.py
