[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyusel"
version = "0.0.0"
authors = [
  { name="Wren Wightman", email="wren.wightman@duke.edu" },
]
description = "Ultrasound Elasticity Imaging Toolkit"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/wewightman/pyusel"